raccourci clavier sur menu Ruches liste détaillée

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -145,8 +145,8 @@
 								th:href="@{/ruche/liste}"></a></li>
 							<li><a class="dropdown-item" th:text="#{rucheTypes}"
 								th:href="@{/rucheType/liste}"></a></li>
-							<li><a class="dropdown-item" th:text="#{listedetail}"
-								th:href="@{/ruche/listeplus}"></a></li>
+							<li><a class="dropdown-item" th:utext="#{listedetail}"
+								th:href="@{/ruche/listeplus}" accesskey="d"></a></li>
 						</ul></li>
 					<li class="nav-item"><a class="nav-link" th:text="#{Hausses}"
 						th:href="@{/hausse/liste}"></a></li>
