ruches liste détaillée ajout filtre rucher

--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -7,8 +7,16 @@
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		$(document).ready(function () {
+			$("#rucher").on("change", function() {
+				if (this.value === "Tous") {
+					tbl.columns(4).search("").draw();	
+				} else {
+					tbl.columns(4).search(this.value).draw();
+				}
+			});
+			
 			const idTbl = '#ruchesplus';
-			new DataTable(idTbl, {
+			const tbl = new DataTable(idTbl, {
 				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 				scrollX: true,
 				buttons: [
@@ -47,7 +55,18 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{Ruches}">Les ruches</h1>
+				<h1 class="item" th:text="#{Ruches}"></h1>
+			</div>
+			<div class="col">
+				
+				<select class="form-control" id="rucher" name="rucher">
+					<option value="" th:text="#{tous}"></option>
+					<option th:each="rucheropt : ${ruchersNoms}" th:value="${rucheropt}"
+								th:text="${rucheropt}" >
+					</option>
+					
+				</select>
+
 			</div>
 		</div>
 	</div>
