--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org"
+<html
+	xmlns:th="https://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
@@ -17,10 +18,8 @@
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/datatables-1.13.5/datatables.min.css}" />
-
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/images/bootstrap-icons-1.10.2/bootstrap-icons.css}" />
-
 <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
 <script th:src="@{/js/jquery-ui-1.13.2/jquery-ui.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.19.5.js}"></script>
@@ -29,6 +28,12 @@
 	th:href="@{/js/bootstrap-5.3.0/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.13.5/datatables.min.js}"></script>
 <script th:inline="javascript">
+	function updateTheme() {
+		document.querySelector("html").setAttribute("data-bs-theme",
+		window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light")
+	}
+	window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
+	updateTheme();
 	const urlValMessFr = /*[[@{/js/jquery.validate-1.19.5-messages_fr.min.js}]]*/null;
 	const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]]*/null;
 	const datatPageLength = /*[[${@environment.getProperty('datatables.pageLength')}]]*/null;
