--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -102,9 +102,9 @@
 					<th th:text="#{rucher}"></th>
 					<th th:if="${session.voirInactif}" th:text="#{actif}"></th>
 					<th th:text="#{dateAcquisition}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{reineMarquee}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{reineCouleurMarquage}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{reineDateNaissance}"></th>
+					<th th:text="#{reineMarquee}"></th>
+					<th th:text="#{reineCouleurMarquage}"></th>
+					<th th:text="#{reineDateNaissance}"></th>
 					<th th:text="#{souche}"></th>
 					<th th:text="#{agressivite}"></th>
 					<th th:text="#{proprete}"></th>
