--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -56,12 +56,12 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{evenement}"></th>
-					<th th:unless="${rucheId}" style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th th:unless="${essaimId}" style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th th:unless="${rucherId}" style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th th:unless="${hausseId}" style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{valeur}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:unless="${rucheId}" th:text="#{ruche}"></th>
+					<th th:unless="${essaimId}" th:text="#{essaim}"></th>
+					<th th:unless="${rucherId}" th:text="#{rucher}"></th>
+					<th th:unless="${hausseId}" th:text="#{hausse}"></th>
+					<th th:text="#{valeur}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
