--- a/src/main/resources/templates/evenement/evenementPeseeDetail.html
+++ b/src/main/resources/templates/evenement/evenementPeseeDetail.html
@@ -50,11 +50,11 @@
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidskg}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidskg}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
