--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -89,11 +89,18 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidsVide}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+					<!--/*
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{commentaire}"></th>
+					*/-->
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{commentaire}"></th>
 					<th th:text="#{HAUSSEPOSERUCHE}"></th>
 				</tr>
 			</thead>
