--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -291,8 +291,7 @@
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
-						<th style="background-color: LemonChiffon"
-							th:text="#{reineDateNaissance}"></th>
+						<th	th:text="#{reineDateNaissance}"></th>
 						<th th:text="#{dateAcquisition}"></th>
 						<th th:text="#{diff}"></th>
 					</tr>
