--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -114,9 +114,9 @@
 				<tr>
 					<th th:text="#{typeMiel}"></th>
 					<th th:text="#{RucherS}"></th>
-					<th style="background-color: LemonChiffon"
+					<th
 						th:text="#{poidsMielHausses}"></th>
-					<th style="background-color: LemonChiffon"
+					<th
 						th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
 					<th th:text="#{Hausses}"></th>
@@ -151,13 +151,13 @@
 			th:unless="${#lists.isEmpty(detailsRecolte)}">
 			<thead>
 				<tr>
-					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidsMiel}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidsAvant}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidsApres}"></th>
+					<th th:text="#{hausse}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidsMiel}"></th>
+					<th th:text="#{poidsAvant}"></th>
+					<th th:text="#{poidsApres}"></th>
 				</tr>
 			</thead>
 			<tbody>
