--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -130,8 +130,8 @@ $().ready(function() {
 					<th th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{prod}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
+					<th th:text="#{latitude}"></th>
+					<th th:text="#{longitude}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -157,13 +157,12 @@ $().ready(function() {
 		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
-					<th style="background-color: PaleGoldenRod"
-						th:text="#{commentaire}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{essaim}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{date}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{daterucher}"></th>
+					<th th:text="#{COMMENTAIRERUCHER}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{dateEssaim}"></th>
+					<th th:text="#{COMMENTAIREESSAIM}"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -190,9 +189,8 @@ $().ready(function() {
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
-						<th style="background-color: PaleGoldenRod"
-							th:text="#{COMMENTAIRERUCHE}"></th>
-						<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
+						<th th:text="#{COMMENTAIRERUCHE}"></th>
+						<th th:text="#{dateRuche}"></th>
 					</tr>
 				</thead>
 				<tbody>
