--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -58,10 +58,10 @@
 					<th th:text="#{date}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{destProv}"></th>
-					<th th:if="${group}" style="background-color: LemonChiffon" th:text="#{nb}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{nb}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{etat}"></th>
+					<th th:if="${group}" th:text="#{nb}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{nb}"></th>
+					<th th:text="#{etat}"></th>
 				</tr>
 			</thead>
 			<tbody>
