--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -33,11 +33,11 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{nbCadres}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{nbCadres}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
