--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -71,12 +71,12 @@ $(document).ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{valeur}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{hausse}"></th>
+					<th th:text="#{valeur}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
