--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -67,12 +67,20 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{evenement}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{JoursAvant}"></th>
-					<th style="background-color: lightskyblue" th:text="#{commentaire}"></th>
+					<!--/*
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{hausse}"></th>
+					<th th:text="#{JoursAvant}"></th>
+					<th th:text="#{commentaire}"></th>
+					*/-->
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{hausse}"></th>
+					<th th:text="#{JoursAvant}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
