--- a/src/main/resources/templates/evenement/evenementPoidsRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementPoidsRucheListe.html
@@ -33,13 +33,22 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsVide}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{poidsruche}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{diff}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
+					<!--/*
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{poidsruche}"></th>
+					<th th:text="#{diff}"></th>
+					<th th:text="#{commentaire}"></th>
+					*/-->
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{poidsruche}"></th>
+					<th th:text="#{diff}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
