--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -33,11 +33,18 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{provenance}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
+					<!--/*
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{provenance}"></th>
+					<th th:text="#{commentaire}"></th>
+					*/-->
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{provenance}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
