--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -62,10 +62,10 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{RucherS}"></th>
+					<th th:text="#{RucherS}"></th>
 					<th th:text="#{typeMiel}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{poidsMielPot}"></th>
-					<th th:text="#{commentaire}"></th>
+					<th th:text="#{poidsMielPot}"></th>
+					<th th:text="#{commentaire}"></th>					
 				</tr>
 			</thead>
 			<tbody>
