--- a/src/main/resources/templates/ruche/rucheHisto.html
+++ b/src/main/resources/templates/ruche/rucheHisto.html
@@ -24,11 +24,11 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{type}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{etat}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{hausse}"></th>
+					<th th:text="#{commentaire}"></th>
+					<th th:text="#{etat}"></th>
 				</tr>
 			</thead>
 			<tbody>
