--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -100,21 +100,21 @@
 			id="ruches">
 			<thead>
 				<tr>
-					<th style="background-color: LightGoldenRodYellow" th:text="#{nom}"></th>
+					<th th:text="#{nom}"></th>
 					<th th:text="#{essaim}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{daterucher}"></th>
 					<th th:text="#{prod}"></th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:text="#{poidsVide}"></th>
-					<th style="background-color: Tomato" th:text="#{nbCadres}"></th>
-					<th style="background-color: Tomato" th:text="#{nbCadresMax}"></th>
+					<th th:text="#{nbCadres}"></th>
+					<th th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{Hausses}"></th>
 					<th:block th:if="${session.voirLatLon}">
-						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
-						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
+						<th th:text="#{latitude}"></th>
+						<th th:text="#{longitude}"></th>
 					</th:block>
 					<th th:text="#{COMMENTAIRERUCHE}"></th>
 				</tr>
