--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -56,11 +56,11 @@
 					<th th:text="#{rucher}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{destProv}"></th>
-					<th th:if="${group}" style="background-color: LemonChiffon"
+					<th th:if="${group}"
 						th:text="#{nb}"></th>
-					<th style="background-color: LemonChiffon" th:text="#{ruche}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{nb}"></th>
-					<th style="background-color: PaleGoldenRod" th:text="#{etat}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{nb}"></th>
+					<th th:text="#{etat}"></th>
 				</tr>
 			</thead>
 			<tbody>
