--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -40,8 +40,8 @@
 						<th th:text="#{Erreur}"></th>
 						<th th:text="#{date}"></th>
 						<th th:text="#{type}"></th>
-						<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-						<th	style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
+						<th th:text="#{ruche}"></th>
+						<th	th:text="#{rucher}"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -89,12 +89,12 @@
 					<tr>
 						<th th:text="#{date}"></th>
 						<th th:text="#{evenement}"></th>
-						<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-						<th	style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
-						<th	style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
-						<th	style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
-						<th style="background-color: LemonChiffon" th:text="#{valeur}"></th>
-						<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+						<th th:text="#{ruche}"></th>
+						<th th:text="#{essaim}"></th>
+						<th th:text="#{rucher}"></th>
+						<th	th:text="#{hausse}"></th>
+						<th th:text="#{valeur}"></th>
+						<th th:text="#{commentaire}"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -133,8 +133,8 @@
 					<tr>
 						<th th:text="#{date}"></th>
 						<th th:text="#{evenement}"></th>
-						<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
-						<th	style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
+						<th th:text="#{ruche}"></th>
+						<th th:text="#{hausse}"></th>
 					</tr>
 				</thead>
 				<tbody>
