--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-<title th:text="#{forgotPassword}"></title>
-<meta charset="UTF-8" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 </head>
 <body>        
 	<br />
